Refactor SecurityConfiguration for improved readability